<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="@dimen/_15sdp"
    android:elevation="@dimen/_3sdp"
    app:cardElevation="@dimen/_3sdp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgicon"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/txtdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="description"
            android:textStyle="bold"
            android:textSize="@dimen/_18sdp"
            android:textColor="#00f"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/txttemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="30"
                android:textColor="#f00"
                android:paddingStart="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/humdity"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/txthumdity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="60"
                android:textColor="#f00"
                android:paddingStart="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pressure"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/txtpressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1003"
                android:textColor="#f00"
                android:paddingStart="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/txtwindspeed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="7.06"
                android:textColor="#f00"
                android:paddingStart="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/visibility"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/txtvisibility"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="12000"
                android:textColor="#f00"
                android:paddingStart="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/txtdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="09:00:00"
                android:textColor="#00f"
                android:paddingStart="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textSize="@dimen/_14sdp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/txttime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="09:00:00"
                android:textColor="#00f"
                android:paddingStart="@dimen/_10sdp"
                android:textSize="@dimen/_16sdp"
                android:textStyle="bold"/>

        </LinearLayout>



    </LinearLayout>


</androidx.cardview.widget.CardView>